test/type/wrong/open1.kk
type open test {
  X
}

type extend test1 {
  Y
}